<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wsu.library_application.LandingPageActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="28dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="150dp"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="36dp"
                    android:fontFamily="sans-serif"
                    android:text="Monday Workshop"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/details"
                    android:layout_width="368dp"
                    android:layout_height="196dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginTop="80dp"
                        android:text="@string/monday"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="228dp"
                    android:text="@string/schedule"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/details"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/Android"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/data"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/jira"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/tensor"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/vmware"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/cloud"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/car"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/grovy"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/aws"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/crm"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/nsx"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/pega"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/iot"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/details"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/join"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />


            </android.support.constraint.ConstraintLayout>

        </RelativeLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.DrawerLayout>