<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wsu.library_application.LandingPageActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="Mutli-OS Zone"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="368dp"
        android:layout_height="196dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/multios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Layout"
        android:layout_width="368dp"
        android:layout_height="500dp"
        android:layout_marginTop="165dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="363dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/first"
            android:textAlignment="textStart"

            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="352dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="2. The base operating system is based on Windows 7 with basic features like Microsoft Office 2013."
            android:textAlignment="textStart"

            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="3. A user can ask for a customized PC with a special request, consisting of software that he or she requires to work with."
            android:textAlignment="textStart"

            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/four"
            android:textAlignment="textStart"

            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="360dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/five"

            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="348dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/info"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:layout_editor_absoluteX="0dp" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.DrawerLayout>